--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,15 @@
 services:
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+    ports:
+      - 9090:9090
+    restart: unless-stopped
+    volumes:
+      - ./prometheus:/etc/prometheus
+      - prom_data:/prometheus
   grafana:
     image: grafana/grafana-oss
     container_name: grafana
@@ -6,6 +17,6 @@ services:
     ports:
       - '3000:3000'
     volumes:
-      - grafana-storage:/var/lib/grafana
+      - ./grafana:/etc/grafana/provisioning/datasources
 volumes:
-  grafana-storage: {}
+  prom_data: 
