--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -2,6 +2,7 @@ global:
   scrape_interval: 15s
   scrape_timeout: 10s
   evaluation_interval: 15s
+
 alerting:
   alertmanagers:
   - static_configs:
@@ -9,6 +10,10 @@ alerting:
     scheme: http
     timeout: 10s
     api_version: v1
+
+rule_files:
+  - "rules/*.yaml"
+  
 scrape_configs:
 - job_name: prometheus
   honor_timestamps: true
