--- a/loki/loki-config.yaml
+++ b/loki/loki-config.yaml
@@ -8,13 +8,6 @@ limits_config:
   allow_structured_metadata: true
   volume_enabled: true
 
-distributor:
-  otlp_config:
-    # List of default otlp resource attributes to be picked as index labels
-    # CLI flag: -distributor.otlp.default_resource_attributes_as_index_labels
-      default_resource_attributes_as_index_labels: [service.name service.namespace service.instance.id deployment.environment deployment.environment.name cloud.region cloud.availability_zone k8s.cluster.name k8s.namespace.name k8s.container.name container.name k8s.replicaset.name k8s.deployment.name k8s.statefulset.name k8s.daemonset.name k8s.cronjob.name k8s.job.name]
-
-
 server:
   http_listen_port: 3100
 
@@ -45,3 +38,9 @@ storage_config:
 
 pattern_ingester:
   enabled: true
+
+# Note: We are setting the max chunk age far lower than the default expected value
+# This is due to the fact this scenario is used within the LogCLI demo and we need a short flush time.
+# To show how logcli stats --since 24h '{service_name="Delivery World", package_size="Large"}' works.
+ingester:
+  max_chunk_age: 5m # Should be 2 hours
